# rusty_password

./: Cargo.toml  README.md
src/: gui.rs  main.rs  password.rs
