[package]
name = "rusty_password"
version = "0.1.0"
edition = "2021"
authors = ["Sean Quaint <seanquaint@zohomail.com>"]
description = "Generates strong passwords and adds them to the Gnome buffer."

[dependencies]
gtk = { version = "0.18.1" }
rand = "0.8.5"
clap = { version = "4.5.9", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
