[package]
name = "rusty_password"
version = "0.3.0"
edition = "2021"
authors = ["Sean Quaint <seanquaint@zohomail.com>"]
description = "Generates strong passwords and displays them in either a GUI or CLI."
homepage = "https://github.com/scqcasc/rusty_password"

[dependencies]
gtk = { version = "0.18.1" }
rand = "0.8.5"
clap = { version = "4.5.9", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
